--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ on:
     tags-ignore:
       - '*'
 
+defaults:
+  run:
+    shell: bash
+
 env:
   CI_SKIP: false
 
@@ -23,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        target: [14.x]
+        target: [16.x]
     timeout-minutes: 120
 
     steps:
@@ -31,7 +35,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Git log
-        shell: bash
         run: |
           if [ -n "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
             echo "CI_SKIP=true" >> $GITHUB_ENV
@@ -49,10 +52,19 @@ jobs:
 
       - name: List versions
         continue-on-error: true
-        shell: bash
         if: env.CI_SKIP != 'true'
         run: |
+          npm i -g npm@latest
           node -v && npm version && which npm && pwd && npx envinfo
+
+      - name: Cache dependencies
+        id: npm-cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ matrix.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ matrix.os }}-npm-
 
       - name: Install dependencies
         if: env.CI_SKIP != 'true'
@@ -62,7 +74,7 @@ jobs:
       - name: Lint
         if: env.CI_SKIP != 'true'
         run: |
-          npm run lint
+          npm run lint:build
 
       - name: Package check
         if: env.CI_SKIP != 'true'
@@ -73,7 +85,7 @@ jobs:
         if: env.CI_SKIP != 'true'
         run: |
           npm t
-          
+
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v1
         if: env.CI_SKIP != 'true' && success()
