--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
-  "extends": "@reallyland/tsconfig/browser",
+  "extends": "@reallyland/tsconfig/browser/tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
     "declarationDir": "dist",
     "inlineSources": false,
-    "sourceMap": false
+    "outDir": "dist",
+    "rootDir": "src",
+    "sourceMap": false,
+    "target": "ES2019"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
