--- a/package.json
+++ b/package.json
@@ -40,31 +40,28 @@
     "dist/**/*.d.ts.map",
     "dist/**/*.d.ts",
     "dist/**/*.js.map",
-    "dist/**/*.js"
+    "dist/**/*.js",
+    "postinstall.*",
+    "!**/*demo*/**/*.*",
+    "!**/*test*/**/*.*"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.prod.json",
-    "check": "package-check",
-    "clean": "rm -rf .*cache *.log coverage/ dist/ logs/",
-    "commitlint": "npm run commitlint",
-    "postinstall": "if [ \"$CI\" != 'true' ]; then npm dedupe; fi",
+    "clean": "rm -rf .*cache *.log .swc/ coverage/ dist/ logs/",
+    "postinstall": "bash postinstall.bash",
     "lint": "eslint src/**/*.ts --ext .js,.jsx,.ts,.tsx",
-    "lint-commit": "npm x -y -- commitlint --edit",
+    "lint-commit": "npm x -y -- commitlint@latest --edit",
     "lint:build": "npm run lint -- --config .build.eslintrc.json",
-    "nano-staged": "nano-staged",
-    "prepare": "if [ \"$CI\" != 'true' ]; then npm x -y -- simple-git-hooks; fi",
-    "prepublishOnly": "npm run lint && npm run build",
+    "prepublishOnly": "npm run lint:build && npm run build",
     "serve": "npm x -y @web/dev-server@latest -- wds --node-resolve -dw -p 3000",
     "serve:app": "npm x -y @web/dev-server@latest -- wds --node-resolve -dw -p 3000 -a demo.html",
-    "test": "wtr",
-    "ts": "tsc",
-    "watch": "wtr --watch",
-    "wtr": "node --max-old-space-size=8192 --trace-deprecation node_modules/@web/test-runner/dist/bin.js"
+    "test": "npm run wtr",
+    "watch": "npm run wtr --watch",
+    "wtr": "node --max-old-space-size=8192 --trace-deprecation node_modules/@web/test-runner/dist/bin.js --config wtr.config.mjs"
   },
   "simple-git-hooks": {
-    "pre-commit": "npm run check && npm run nano-staged && npm run ts -- --noEmit",
-    "commit-msg": "npm run lint-commit",
-    "post-commit": "npm run clean"
+    "pre-commit": "package-check && nano-staged && tsc --noEmit",
+    "commit-msg": "npm run lint-commit"
   },
   "commitlint": {
     "extends": [
@@ -74,32 +71,30 @@
   "dependencies": {
     "@material/mwc-button": "^0.25.3",
     "@reallyland/esm": "^0.0.3",
-    "lit": "^2.1.1",
+    "lit": "^2.1.2",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.0.0",
-    "@esm-bundle/chai": "^4.3.4-fix.0",
     "@open-wc/testing": "^3.0.3",
     "@reallyland/tsconfig": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@skypack/package-check": "^0.2.2",
-    "@types/prismjs": "^1.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@types/prismjs": "^1.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "@web/dev-server-esbuild": "^0.2.10",
-    "@web/test-runner": "^0.13.25",
+    "@web/test-runner": "^0.13.27",
     "@web/test-runner-mocha": "^0.7.2",
     "@web/test-runner-playwright": "^0.8.4",
-    "commitlint": "^16.0.2",
-    "eslint": "^8.6.0",
+    "eslint": "^8.8.0",
     "eslint-plugin-lit": "^1.3.0",
     "eslint-plugin-lit-a11y": "^2.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-regexp": "^1.5.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "nano-staged": "^0.5.0",
-    "simple-git-hooks": "^2.7.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">= 16.x",
