--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,9 @@ defaults:
 
 env:
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  NODE_VERSION: v0.0.0
+  NPM_CACHE_DIR: ~/.npm
+  NPM_VERSION: 0.0.0
 
 jobs:
   build:
@@ -28,15 +31,34 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup node@${{ matrix.target }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.target }}
-          registry-url: 'https://registry.npmjs.org'
+      # - name: Setup node@${{ matrix.target }}
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: ${{ matrix.target }}
+      #     registry-url: 'https://registry.npmjs.org'
 
       - name: List versions
         run: |
-          node -v && npm version && which npm
+          echo "NODE_VERSION=$(node -v)" >> $GITHUB_ENV
+          echo "NPM_CACHE_DIR=$(npm config get cache)" >> $GITHUB_ENV
+          echo "NPM_VERSION=$(npm -v)" >> $GITHUB_ENV
+
+          pwd
+          ls -la
+          which npm
+          npm config list
+
+      - name: Cache dependencies
+        id: npm-cache
+        uses: actions/cache@v2
+        with:
+          # See this glob workaround at https://github.com/actions/toolkit/issues/713.
+          path: |
+            ${{ env.NPM_CACHE_DIR }}/*
+            !${{ env.NPM_CACHE_DIR }}/_npx
+          key: ${{ matrix.os }}-node-${{ env.NODE_VERSION }}-npm-${{ env.NPM_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ matrix.os }}-node-${{ env.NODE_VERSION }}-npm-${{ env.NPM_VERSION }}
 
       - name: Install dependencies
         run: |
@@ -45,13 +67,11 @@ jobs:
       - name: Publish to npm (Prerelease)
         if: contains(github.ref, '-') == true
         run: |
-          npm config list
           npm publish . --tag=next
 
       - name: Publish to npm
         if: contains(github.ref, '-') == false
         run: |
-          npm config list
           npm publish .
 
       # See https://github.com/actions/setup-node/issues/73.
