feat: fire property-changed event when property changes
Signed-off-by: Rong Sen Ng (motss) <wes.ngrongsen@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,19 @@
         "disallowTypeAnnotations": false
       }
     ],
+    "@typescript-eslint/no-empty-interface": [
+      "error",
+      {
+        "allowSingleExtends": true
+      }
+    ],
+    "semi": "off",
+    "@typescript-eslint/semi": ["error", "always"],
+    "no-multiple-empty-lines": ["error", {
+      "max": 1,
+      "maxBOF": 0,
+      "maxEOF": 0
+    }],
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error"
   }
