ci: trying to fix npm
Signed-off-by: Rong Sen Ng (motss) <wes.ngrongsen@gmail.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
           pwd
           ls -la
           which npm
-          npm config list
+          npm config ls -l
 
       - name: Cache dependencies
         id: npm-cache
