--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # - name: Setup node@${{ matrix.target }}
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: ${{ matrix.target }}
-      #     registry-url: 'https://registry.npmjs.org'
+      - name: Setup node@${{ matrix.target }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.target }}
+          registry-url: 'https://registry.npmjs.org'
 
       - name: List versions
         run: |
