--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,17 +31,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup node@${{ matrix.target }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.target }}
-          registry-url: 'https://registry.npmjs.org'
-
       - name: List versions
         run: |
           echo "NODE_VERSION=$(node -v)" >> $GITHUB_ENV
           echo "NPM_CACHE_DIR=$(npm config get cache)" >> $GITHUB_ENV
           echo "NPM_VERSION=$(npm -v)" >> $GITHUB_ENV
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" >> ~/.npmrc
 
           pwd
           ls -la
