--- a/package.json
+++ b/package.json
@@ -50,15 +50,15 @@
     "clean": "rm -rf .*cache *.log .swc/ coverage/ dist/ logs/",
     "dev": "npm run serve & npm run watch",
     "postinstall": "sh postinstall.sh",
-    "lint": "eslint src/**/*.ts --ext .js,.jsx,.ts,.tsx",
-    "lint-commit": "npm x -y -- commitlint@latest --edit",
-    "lint:build": "npm run lint -- --config .build.eslintrc.json",
-    "pre-commit": "package-check && nano-staged && tsc --noEmit",
+    "lint": "sh ./node_modules/@reallyland/tools/lint-build.sh -c ./node_modules/@reallyland/tools/browser/lit/.eslintrc.json",
+    "lint-commit": "sh ./node_modules/@reallyland/tools/lint-commit.sh",
+    "lint:build": "sh ./node_modules/@reallyland/tools/lint-build.sh -c ./node_modules/@reallyland/tools/browser/lit/.build.eslintrc.json",
+    "pre-commit": "sh ./node_modules/@reallyland/tools/pre-commit.sh",
     "prepublishOnly": "npm run lint:build && npm run build",
     "serve": "npm x -y @web/dev-server@latest -- wds --node-resolve -dw -p 3000",
     "test": "npm run wtr",
     "watch": "npm run clean && tsc --watch",
-    "wtr": "node --max-old-space-size=8192 --trace-deprecation node_modules/@web/test-runner/dist/bin.js --config wtr.config.mjs"
+    "wtr": "node --max-old-space-size=8192 --trace-deprecation node_modules/.bin/wtr --config wtr.config.mjs"
   },
   "simple-git-hooks": {
     "pre-commit": "npm run pre-commit",
@@ -78,22 +78,17 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.1",
     "@open-wc/testing": "^3.1.2",
+    "@reallyland/tools": "^0.0.1-rc.8",
     "@reallyland/tsconfig": "^4.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@skypack/package-check": "^0.2.2",
     "@types/prismjs": "^1.26.0",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
     "@web/dev-server-esbuild": "^0.2.10",
     "@web/test-runner": "^0.13.27",
     "@web/test-runner-mocha": "^0.7.2",
     "@web/test-runner-playwright": "^0.8.4",
-    "eslint": "^8.11.0",
-    "eslint-plugin-lit": "^1.3.0",
+    "eslint-plugin-lit": "^1.6.1",
     "eslint-plugin-lit-a11y": "^2.2.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-regexp": "^1.6.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "nano-staged": "^0.6.0",
     "typescript": "^4.6.2"
   },
@@ -103,11 +98,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "nano-staged": {
-    "*.ts": [
-      "npm run lint:build -- --fix",
-      "git add"
-    ]
   }
 }
