--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.prod.json",
-    "clean": "rm -rf .*cache *.log .swc/ coverage/ dist/ logs/",
+    "clean": "sh ./node_modules/@reallyland/tools/cleanup.sh",
     "dev": "npm run serve & npm run watch",
     "postinstall": "sh ./node_modules/@reallyland/tools/postinstall.sh",
     "lint": "sh ./node_modules/@reallyland/tools/lint-build.sh -c ./node_modules/@reallyland/tools/browser/lit/.eslintrc.json",
@@ -59,15 +59,6 @@
     "watch": "npm run clean && tsc --watch",
     "wtr": "node --max-old-space-size=8192 --trace-deprecation node_modules/.bin/wtr --config wtr.config.mjs"
   },
-  "simple-git-hooks": {
-    "pre-commit": "npm run pre-commit",
-    "commit-msg": "npm run lint-commit"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
   "dependencies": {
     "@material/mwc-button": "^0.25.3",
     "@reallyland/esm": "^0.0.4",
@@ -75,12 +66,9 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^16.2.1",
     "@open-wc/testing": "^3.1.2",
-    "@reallyland/tools": "^0.0.1-rc.9",
-    "@reallyland/tsconfig": "^4.0.1",
+    "@reallyland/tools": "^0.0.1-rc.12",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@skypack/package-check": "^0.2.2",
     "@types/prismjs": "^1.26.0",
     "@web/dev-server-esbuild": "^0.2.10",
     "@web/test-runner": "^0.13.27",
@@ -88,7 +76,6 @@
     "@web/test-runner-playwright": "^0.8.4",
     "eslint-plugin-lit": "^1.6.1",
     "eslint-plugin-lit-a11y": "^2.2.0",
-    "nano-staged": "^0.6.0",
     "typescript": "^4.6.2"
   },
   "engines": {
