--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "devDependencies": {
     "@open-wc/testing": "^3.1.2",
-    "@reallyland/tools": "^0.0.1-rc.12",
+    "@reallyland/tools": "^0.0.1-rc.14",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/prismjs": "^1.26.0",
     "@web/dev-server-esbuild": "^0.2.10",
@@ -75,8 +75,7 @@
     "@web/test-runner-mocha": "^0.7.2",
     "@web/test-runner-playwright": "^0.8.4",
     "eslint-plugin-lit": "^1.6.1",
-    "eslint-plugin-lit-a11y": "^2.2.0",
-    "typescript": "^4.6.2"
+    "eslint-plugin-lit-a11y": "^2.2.0"
   },
   "engines": {
     "node": ">= 16.x",
