--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  "extends": "@reallyland/tsconfig/browser/tsconfig.json",
+  "extends": "@reallyland/tools/browser/tsconfig.json",
   "compilerOptions": {
-    "importHelpers": true
+    "declarationDir": "dist",
+    "importHelpers": true,
+    "outDir": "dist",
+    "rootDir": "src"
     // "inlineSources": false,
     // "sourceMap": false
   },
