--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reallyland/really-elements",
-  "version": "0.10.9",
+  "version": "0.10.10-rc.0",
   "description": "A collection of opinionated custom elements for the web",
   "keywords": [
     "elements",
