chore: update dependencies
Signed-off-by: Rong Sen Ng (motss) <wes.ngrongsen@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,9 @@
   "extends": "@reallyland/tools/browser/tsconfig.json",
   "compilerOptions": {
     "declarationDir": "dist",
-    "importHelpers": true,
     "outDir": "dist",
     "rootDir": "src"
-    // "inlineSources": false,
-    // "sourceMap": false
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["dist", "node_modules"]
 }
