chore: update dependencies, add Rome as formatter, update CI scripts
Signed-off-by: Rong Sen Ng (motss) <wes.ngrongsen@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .firebase/
 .nyc_output
 .tmp/
-.vscode
+.vscode/*
 *.env
 *.idea
 *.local
@@ -22,3 +22,5 @@ node_modules/
 web_modules/
 
 # Do not ignore
+!.vscode/extensions.json
+!.vscode/settings.json
