--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,16 +2,15 @@ name: publish
 
 on:
   push:
-    branches-ignore:
-      - '*'
-    tags:
-      - '*'
+    branches:
+      - main
 
 defaults:
   run:
     shell: bash
 
 env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   NODE_VERSION: v0.0.0
   NPM_CACHE_DIR: ~/.npm
@@ -25,11 +24,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        target: [16.x]
+        target: [18.x]
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      # - name: Setup node@${{ matrix.target }}
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: ${{ matrix.target }}
+      #     registry-url: 'https://registry.npmjs.org'
 
       - name: List versions
         run: |
@@ -45,7 +50,7 @@ jobs:
 
       - name: Cache dependencies
         id: npm-cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           # See this glob workaround at https://github.com/actions/toolkit/issues/713.
           path: |
@@ -57,7 +62,16 @@ jobs:
 
       - name: Install dependencies
         run: |
+          npm pkg delete scripts.postinstall
           npm ci
+
+      - name: Build
+        run: |
+          npm run build
+
+      - name: Cleanup package.json
+        run: |
+          npm pkg delete devDependencies nano-staged scripts
 
       - name: Publish to npm (Prerelease)
         if: contains(github.ref, '-') == true
@@ -69,22 +83,11 @@ jobs:
         run: |
           npm publish .
 
-      # See https://github.com/actions/setup-node/issues/73.
-      # - name: Setup node@${{ matrix.target }}
-      #   uses: actions/setup-node@v1
+      # - name: Create release pull request or publish to npm
+      #   id: changesets
+      #   uses: changesets/action@v1
       #   with:
-      #     node-version: ${{ matrix.target }}
-      #     registry-url: 'https://npm.pkg.github.com/'
-      #     scope: '@motss'
-
-      # - name: Publish to GPR (Prerelease)
-      #   if: success() && contains(github.ref, '-') == true
-      #   run: |
-      #     npm config list
-      #     npm publish . --tag=next
-
-      # - name: Publish to GPR (Prerelease)
-      #   if: success() && contains(github.ref, '-') == false
-      #   run: |
-      #     npm config list
-      #     npm publish .
+      #     commit: 'chore: release package'
+      #     publish: npm x -y -- changeset publish
+      #     title: 'chore: release package'
+      #     version: npm x -y -- changeset version
