--- a/package.json
+++ b/package.json
@@ -26,12 +26,32 @@
   },
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
-    "./clipboard-copy": "./dist/clipboard-copy/clipboard-copy.js",
-    "./code-configurator": "./dist/code-configurator/code-configurator.js",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
+    "./clipboard-copy": {
+      "types": "./dist/clipboard-copy/clipboard-copy.d.ts",
+      "import": "./dist/clipboard-copy/clipboard-copy.js",
+      "default": "./dist/clipboard-copy/clipboard-copy.js"
+    },
+    "./code-configurator": {
+      "types": "./dist/code-configurator/code-configurator.d.ts",
+      "import": "./dist/code-configurator/code-configurator.js",
+      "default": "./dist/code-configurator/code-configurator.js"
+    },
     "./dist/*": "./dist/*",
-    "./really-clipboard-copy": "./dist/clipboard-copy/really-clipboard-copy.js",
-    "./really-code-configurator": "./dist/code-configurator/really-code-configurator.js"
+    "./really-clipboard-copy": {
+      "types": "./dist/clipboard-copy/really-clipboard-copy.d.ts",
+      "import": "./dist/clipboard-copy/really-clipboard-copy.js",
+      "default": "./dist/clipboard-copy/really-clipboard-copy.js"
+    },
+    "./really-code-configurator": {
+      "types": "./dist/code-configurator/really-code-configurator.d.ts",
+      "import": "./dist/code-configurator/really-code-configurator.js",
+      "default": "./dist/code-configurator/really-code-configurator.js"
+    }
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -48,6 +68,8 @@
     "build": "tsc -p tsconfig.prod.json",
     "clean": "sh $(npm root)/@reallyland/tools/cleanup.sh",
     "dev": "npm run serve & npm run watch",
+    "fmt": "rome format --verbose --write .",
+    "fmt.check": "rome format --verbose .",
     "postinstall": "FILE=\"$(npm root)/@reallyland/tools/postinstall.sh\"; if [ -f \"$FILE\" ]; then sh \"$FILE\"; fi",
     "lint": "sh $(npm root)/@reallyland/tools/lint-build.sh -c $(npm root)/@reallyland/tools/browser/lit/.eslintrc.json",
     "lint-commit": "sh $(npm root)/@reallyland/tools/lint-commit.sh",
@@ -55,9 +77,8 @@
     "pre-commit": "sh $(npm root)/@reallyland/tools/pre-commit.sh",
     "prepublishOnly": "npm run lint:build && npm run build",
     "serve": "npm x -y @web/dev-server@latest -- wds --node-resolve -dw -p 3030",
-    "test": "npm run wtr",
-    "watch": "npm run clean && tsc --watch",
-    "wtr": "node --max-old-space-size=8192 --trace-deprecation $(npm bin)/wtr --config wtr.config.mjs"
+    "test": "wtr --config wtr.config.mjs --update-snapshots",
+    "watch": "npm run clean && tsc --watch"
   },
   "dependencies": {
     "@material/mwc-button": "^0.26.1",
@@ -66,16 +87,16 @@
     "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@open-wc/testing": "^3.1.5",
-    "@reallyland/tools": "^0.0.14",
-    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@open-wc/testing": "^3.1.7",
+    "@reallyland/tools": "^0.3.5",
     "@types/prismjs": "^1.26.0",
-    "@web/dev-server-esbuild": "^0.3.0",
-    "@web/test-runner": "^0.13.27",
+    "@web/dev-server-esbuild": "^0.3.4",
+    "@web/test-runner": "^0.15.1",
     "@web/test-runner-mocha": "^0.7.2",
-    "@web/test-runner-playwright": "^0.8.4",
-    "eslint-plugin-lit": "^1.6.1",
-    "eslint-plugin-lit-a11y": "^2.2.0"
+    "@web/test-runner-playwright": "^0.9.0",
+    "eslint-plugin-lit": "^1.8.2",
+    "eslint-plugin-lit-a11y": "^2.4.0",
+    "rome": "^11.0.0"
   },
   "engines": {
     "node": ">= 16.x",
