fix: use npx instead of npm bin
Signed-off-by: Rong Sen Ng (motss) <wes.ngrongsen@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
 
       - name: Setup Playwright
         run: |
-          $(npm bin)/playwright install-deps
+          npx playwright install-deps
 
       - name: Test
         if: env.IS_UBUNTU == 'false'
