fix: set useDefineForClassFields: false
Signed-off-by: Rong Sen Ng (motss) <wes.ngrongsen@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "declarationDir": "dist",
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "useDefineForClassFields": false
   },
   "include": ["src/**/*.ts"],
   "exclude": ["dist", "node_modules"]
